--- a/home.html
+++ b/home.html
@@ -27,7 +27,11 @@
             </div>
         </div>
         <div class="footer">
-            qwertrtt
+            <div class="nama">
+                Nama : ihya' Ulumuddin
+            </div>
+            <div class="nama">Nim : 220411100038</div>
+            <div class="nama">DPW TM2</div>
         </div>
     </body>
 </html>
